Fix manifest module access syntax